@@ -1,3 +1,10 @@
+2012-02-27  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix make distcheck.
+
+        * GNUmakefile.am: Add missing files.
+        * GNUmakefile.list.am: Ditto.
+
 2012-02-27  Patrick Gansterer  <paroga@webkit.org>
 
         [CMake] Build fix after r108709.
