@@ -1,3 +1,9 @@
+2012-02-27  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix make distcheck.
+
+        * GNUmakefile.am: Fix typo.
+
 2012-02-27  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
 
         [Qt] Use USE() macro instead of ENABLE() for using the Qt image decoder
